# esp32-idf-project

./: README.md  mmm.sh
hello_world/: .gitignore  sdkconfig  sdkconfig.old
hello_world/components/chipinfo/: CMakeLists.txt  chipinfo.c  chipinfo.h
hello_world/components/led/: CMakeLists.txt  led.c  led.h
hello_world/components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h  ssd1306_i2c.c
hello_world/components/u8g2/: CMakeLists.txt  u8g2_d_memory.c  u8g2_d_setup.c  u8g2_setup.c  u8g2_ssd1306_hal.c  u8g2_ssd1306_hal.h
hello_world/main/: CMakeLists.txt  allwinner_logo.h  hello_world_main.c  u8g2_ui_test.c  u8g2_ui_test.h
